--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
   <script src="js/map.js"></script>
   <script src="js/form.js"></script>
   <script src="js/filters.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
